# quantum-ai-orchestrator

./: .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
config/: backends.yaml  dashboard.yaml  problems.yaml
docs/: host-setup.md  index.md  plan.md
docs/adr/: 0001-charter-and-licensing.md  0002-no-nvlink-two-gpu-racing.md  0003-cuda-quantum-container.md  0004-decomposer-llm-gemma4.md  0005-postgres-tenant-no-neo4j.md  0006-pymatching-stim-native.md  0007-nvidia-ising-predecoder.md  0008-crumble-via-stim-svg.md  0009-visualization-stack.md  0010-decomposer-runtime-vllm-remote.md  template.md
docs/journal/: STYLE.md
docs/journal/journey/: 00-origin.md  01-phase0-complete.md
infra/cudaq-worker/: qaoa_worker.py
migrations/: 0001_quantum_ai_orchestrator_db.sql  0002_qec_decode_schema.sql  0003_mission_assignment_schema.sql  0004_routing_schema.sql  0005_portfolio_schema.sql
orchestrator/: cli.py
orchestrator/pipeline/: __init__.py  decomposer.py  dispatcher.py  evaluator.py  formulator.py  reassembler.py  runner.py  strategist.py  types.py
orchestrator/quantum/backends/: __init__.py  _ising_common.py  base.py  classical_ortools.py  cudaq_qaoa.py  ising_accuracy.py  ising_speed.py  neal.py  pymatching.py
orchestrator/storage/: __init__.py  dispatches.py  outcomes.py  pool.py  runs.py
skills/: __init__.py
skills/mission_assignment/: __init__.py  evaluator.py  formulator.py
skills/portfolio/: __init__.py
skills/qec_decode/: __init__.py  evaluator.py  formulator.py
skills/routing/: __init__.py
tests/smoke/: conftest.py  test_01_qaoa_12q.py  test_02_qaoa_28q.py  test_03_stim_syndrome.py  test_04_ising_decode.py  test_05_pymatching.py  test_06_postgres.py  test_07_stim_diagram.py  test_08_pymatching_draw.py  test_09_dwave_inspector.py  test_10_qutip_bloch.py  test_11_npm_install.py
tests/smoke/decomposer-remote/: 01_models.json  02_chat.json  03_decomposer_smoke.json  03_decomposer_smoke.py  04_tool_call.json  04_tool_call.py
tools/: bench_decomposers.py  bench_decomposers.sh  bootstrap_ising.sh
web/api/: serve_replay.py
web/ui/: next.config.ts  package-lock.json  package.json  tsconfig.json
web/ui/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/ui/src/components/: AboutRun.module.css  AboutRun.tsx  AssignmentBipartite.module.css  AssignmentBipartite.tsx  BackendBakeoff.module.css  BackendBakeoff.tsx  PredecoderPipelineDiagram.tsx  QecCircuit.module.css  QecCircuit.tsx  QecLerCurve.module.css  QecLerCurve.tsx  QuboHeatmap.module.css  QuboHeatmap.tsx  RunDetail.module.css  RunDetail.tsx  RunList.module.css  RunList.tsx  SurfaceCodeWidget.module.css  Welcome.tsx  (+2 more)
(+19 files in other folders)
